# mbtxx

./: .bazelrc  .gitignore  WORKSPACE
bazel/: repositories.bzl
common/: BUILD.bazel
mbtxx_cpp/: BUILD.bazel
mbtxx_cpp/demo/: BUILD.bazel  main.cpp  mymodule.lua  test.lua
mbtxx_cpp/demo/lualib/: mbtxx.lua
mbtxx_cpp/demo/scripts/: test.lua
mbtxx_cpp/mbtxx/: app_cli_handler.hpp  app_lua_handler.hpp  app_test_runner.hpp  external.hpp  hello_world.hpp  mbtxx.hpp
mbtxx_cpp/test/: BUILD.bazel  test.cpp
myapp/: BUILD.bazel  main.cpp
mylib/: BUILD.bazel  mylib.cpp  mylib.hpp
mylib/test/: BUILD.bazel  test.cpp
scripts/: api_poc.lua  poc.lua
