cc_library(
    name = "mbtxx",
    visibility = ["//visibility:public"],
    includes = ["."],
    srcs = glob([
        "mbtxx/*.chp",
        "mbtxx/**/*.hpp"
    ]),
    hdrs = [
        "mbtxx/mbtxx.hpp",
    ],
    defines = [
        "SOL_ALL_SAFETIES_ON",
    ],
    deps = [
        "@boost//:json",
        "@boost//:program_options",
        "@boost//:exception",
        "@boost//:system",
        "@boost//:chrono",
        "@boost//:regex",
        "@boost//:format",
        "@lua//:lua",
        "@sol//:sol",
    ],
)
