cc_library(
    name = "mbtxx",
    visibility = ["//visibility:public"],
    includes = ["."],
    srcs = glob([
        "mbtxx/*.chp",
        "mbtxx/**/*.hpp"
    ]),
    hdrs = [
        "mbtxx/mbtxx.hpp",
    ],
    defines = [
        "SOL_ALL_SAFETIES_ON",
    ],
    deps = [
        "@boost//:chrono",
        "@boost//:exception",
        "@boost//:format",
        "@boost//:json",
        "@boost//:program_options",
        "@boost//:regex",
        "@boost//:system",
        "@boost//:timer",

        "@lua//:lua",
        "@sol//:sol",
    ],
)
